--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -22,3 +22,37 @@
 .button-search {
   border-radius: 6px;
 }
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  padding: 20px 30px;
+}
+
+.photo-card {
+  flex-basis: calc((100% - 60px) / 4);
+  outline: solid 1px grey;
+  border-radius: 4px;
+  box-shadow: 2px 2px 8px 1px rgba(0, 0, 0, 0.5);
+}
+
+.photo-card img {
+  display: block;
+  margin: 0 auto;
+  height: 250px;
+  width: 100%;
+  object-fit: cover;
+}
+
+.info {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+}
+
+.info-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
