--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,5 +1,10 @@
 @import '~node_modules/modern-normalize/modern-normalize.css';
 
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
 .header {
   background-color: #2596be;
 }
@@ -33,8 +38,11 @@
   gap: 20px;
 }
 
-.photo-card {
+.photo-link {
   flex-basis: calc((100% - 60px) / 4);
+}
+
+.photo-card {
   outline: solid 1px grey;
   border-radius: 4px;
   box-shadow: 2px 2px 8px 1px rgba(0, 0, 0, 0.5);
