--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -7,12 +7,12 @@ a {
 
 .header {
   background-color: #2596be;
+  position: fixed;
+  width: 100vw;
 }
 .header-container {
   display: flex;
   justify-content: center;
-  padding-top: 15px;
-  padding-bottom: 15px;
 }
 .container {
   padding-top: 15px;
@@ -20,7 +20,7 @@ a {
 }
 
 .wrapper {
-  padding: 20px;
+  padding: 70px 20px 20px 20px;
 }
 
 .input {
